--- a/HomeWorkWeekOneDayTwo.html
+++ b/HomeWorkWeekOneDayTwo.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-h1>Заголовок h1</h1>
+<h1>Заголовок h1(заголовок h1)</h1>
 <h2>Заголовок h2</h2>
 <h3>Заголовок h3</h3>
 <h4>Заголовок h4</h4>
